--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,13 @@
- 
+dependencies {
+    // Existing dependencies...
+
+    // Monitoring & Metrics
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    
+    // Rate Limiting
+    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
+    
+    // AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+} 
