--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Compiled class file
+# Compiled files
 *.class
 
-# Log file
+# Log files
 *.log
 
 # BlueJ files
@@ -10,15 +10,35 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package files
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+*.tgz
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Crash and replay logs
 hs_err_pid*
 replay_pid*
+
+# Gradle files
+.gradle/
+build/
+
+# IntelliJ IDEA files
+.idea/
+*.iml
+
+# VSCode files
+.vscode/
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# Temporary and backup files
+*.bak
+*.tmp
+*.swp
