--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
     implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
     implementation 'org.glassfish:javax.el:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.swagger.core.v3:swagger-annotations:2.1.2'
     implementation 'org.flywaydb:flyway-core:9.16.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
