--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+  security:
+    debug: true 
+
   redis:
     host: localhost
     port: 6379
@@ -52,7 +55,7 @@ spring:
     locations: classpath:db/migration
     
 jwt:
-  secret: ${JWT_SECRET:your-256-bit-secret}
+  secret: ${JWT_SECRET:your-256-bit-secret-12345678901234567890123456789012}
   expiration: 28800 # 8 hours in seconds
 
 server:
@@ -60,7 +63,7 @@ server:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    path: /v1/api-docs
   swagger-ui:
     path: /swagger-ui.html 
 
@@ -87,3 +90,9 @@ management:
     redis:
       time-to-live: 600000
       cache-null-values: false 
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
+    com.boilerplate: DEBUG
