temporarily remove swagger, fix containerization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   app:
+    container_name: spring-boilerplate
     platform: linux/arm64
     build:
       context: .
@@ -19,6 +20,7 @@ services:
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
 
   postgres:
+    container_name: pg_master
     image: postgres:16.2
     ports:
       - "5432:5432"
@@ -30,12 +32,15 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
+    container_name: redis_master
     image: redis:7.0.11
+    command: redis-server --requirepass redis123
     ports:
       - "6379:6379"
 
   zookeeper:
-    image: bitnami/zookeeper:latest
+    container_name: zookeeper_master
+    image: bitnami/zookeeper:3.8.1
     platform: linux/arm64
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -45,6 +50,7 @@ services:
       - "22181:2181"
 
   kafka:
+    container_name: kafka_master
     image: bitnami/kafka:latest
     platform: linux/arm64
     depends_on:
