--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
     id 'java'
+    id 'org.flywaydb.flyway' version '9.22.3'
 }
 
 group = 'com.boilerplate'
@@ -38,15 +39,30 @@ dependencies {
     implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
-    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
-    implementation 'org.glassfish:javax.el:3.0.0'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    implementation 'org.glassfish:jakarta.el:4.0.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-    implementation 'io.swagger.core.v3:swagger-annotations:2.1.2'
-    implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'org.flywaydb:flyway-database-postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
+}
+
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/boilerplate'
+    user = 'postgres'
+    password = 'postgres'
+}
+
+task createMigration {
+    doLast {
+        def migrationName = project.hasProperty('migrationName') ? project.getProperty('migrationName') : 'migration'
+        def timestamp = new Date().format('yyyyMMddHHmmss')
+        def fileName = "V${timestamp}__${migrationName}.sql"
+        def migrationDir = new File("${projectDir}/src/main/resources/db/migration")
+        migrationDir.mkdirs()
+        new File(migrationDir, fileName).createNewFile()
+    }
 } 
