--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   zookeeper:
     container_name: zookeeper_master
-    image: bitnami/zookeeper:3.8.0
+    image: bitnami/zookeeper:3.8.1
     platform: linux/arm64
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -50,13 +50,19 @@ services:
       ALLOW_ANONYMOUS_LOGIN: "yes"
     ports:
       - "22181:2181"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   kafka:
     container_name: kafka_master
     image: bitnami/kafka:latest
     platform: linux/arm64
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - "29092:29092"
     environment:
