Add Redis to implement caching and re-adjust config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,13 @@ services:
       - SMTP_PORT=587
       - SMTP_USERNAME=your-kambing.andro@gmail.com
       - SMTP_PASSWORD=your-app-password
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   db:
     container_name: psql_primary
@@ -32,7 +37,21 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    container_name: redis_cache
+    image: redis:7.2-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
 
 volumes:
   postgres_data:
+  redis_data:
